--- a/viator-bedroom-comp/Builds/MacOSX/Info-AU.plist
+++ b/viator-bedroom-comp/Builds/MacOSX/Info-AU.plist
@@ -29,7 +29,7 @@
     <array>
       <dict>
         <key>name</key>
-        <string>Viator DSP: viator-bedroom-comp</string>
+        <string>Viator DSP: Bedroom Comp MkII</string>
         <key>description</key>
         <string>viator-bedroom-comp</string>
         <key>factoryFunction</key>
