--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,150 @@
+name: Build Pipeline
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  build-mac:
+    runs-on: macos-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
+      - name: Install the Apple certificate and provisioning profile
+        env:
+          BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
+          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+        run: |
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+
+          # import certificate and provisioning profile from secrets
+          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
+
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+
+      - name: Set up Xcode
+        uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+
+      - name: Download Pluginval
+        run: |
+          mkdir Pluginval
+          cd Pluginval
+          curl -L "https://github.com/Tracktion/pluginval/releases/latest/download/pluginval_macOS.zip" -o pluginval.zip
+          unzip pluginval
+
+      - name: Build Plugin Mac AU & VST3
+        run: |
+          cd viator-bedroom-comp/Builds/MacOSX
+          xcodebuild -project "viator-bedroom-comp.xcodeproj" -scheme "viator-bedroom-comp - All" -configuration Release
+
+      - name: Validate Mac AU
+        run: |
+          sudo killall -9 AudioComponentRegistrar
+          sudo killall -9 coreaudiod
+          Pluginval/pluginval.app/Contents/MacOS/pluginval --strictness-level 5 --validate-in-process --verbose --validate ~/Library/Audio/Plug-Ins/Components/viator-bedroom-comp.component || exit 1
+
+      - name: Validate Mac VST3
+        run: |
+          sudo killall -9 AudioComponentRegistrar
+          sudo killall -9 coreaudiod
+          Pluginval/pluginval.app/Contents/MacOS/pluginval --strictness-level 5 --validate-in-process --verbose --validate ~/Library/Audio/Plug-Ins/VST3/viator-bedroom-comp.vst3 || exit 1
+
+      - name: Delete .a files
+        run: rm -R viator-bedroom-comp/Builds/MacOSX/build/Release/libviator-bedroom-comp.a
+
+      - name: Sign Mac Builds
+        env:
+          HASH_OF_DEVELOPER_ID_APPLICATION: ${{ secrets.HASH_OF_DEVELOPER_ID_APPLICATION }}
+        run: |
+          codesign --deep --force --options=runtime --sign "$HASH_OF_DEVELOPER_ID_APPLICATION" --timestamp ~/Library/Audio/Plug-Ins/Components/viator-bedroom-comp.component  || exit 1
+          codesign --deep --force --options=runtime --sign "$HASH_OF_DEVELOPER_ID_APPLICATION" --timestamp ~/Library/Audio/Plug-Ins/VST3/viator-bedroom-comp.vst3  || exit 1
+
+      - name: Zip Mac Builds
+        run: |
+          zip -r viator-bedroom-comp-au.zip ~/Library/Audio/Plug-Ins/Components/viator-bedroom-comp.component  || exit 1
+          zip -r viator-bedroom-comp-vst3.zip ~/Library/Audio/Plug-Ins/VST3/viator-bedroom-comp.vst3  || exit 1
+
+      - name: Sign Mac Zips
+        env:
+          HASH_OF_DEVELOPER_ID_APPLICATION: ${{ secrets.HASH_OF_DEVELOPER_ID_APPLICATION }}
+        run: |
+            codesign --deep --force --options=runtime --sign "$HASH_OF_DEVELOPER_ID_APPLICATION" --timestamp viator-bedroom-comp-au.zip  || exit 1
+            codesign --deep --force --options=runtime --sign "$HASH_OF_DEVELOPER_ID_APPLICATION" --timestamp viator-bedroom-comp-vst3.zip  || exit 1
+
+      - name: Notarize Mac Zips
+        env:
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APP_PASSWORD: ${{ secrets.APP_PASSWORD }}
+          TEAM_ID: ${{ secrets.TEAM_ID }}
+        run: |
+            xcrun notarytool submit viator-bedroom-comp-au.zip --apple-id "$APPLE_ID" --password "$APP_PASSWORD" --team-id "$TEAM_ID" --wait  || exit 1
+            xcrun notarytool submit viator-bedroom-comp-vst3.zip --apple-id "$APPLE_ID" --password "$APP_PASSWORD" --team-id "$TEAM_ID" --wait  || exit 1
+
+      - name: Upload Mac AU
+        uses: actions/upload-artifact@v3
+        with:
+          name: Mac-viator-bedroom-comp-AU-Artifact
+          path: ~/Library/Audio/Plug-Ins/Components/
+
+      - name: Upload Mac VST3
+        uses: actions/upload-artifact@v3
+        with:
+          name: Mac-viator-bedroom-comp-VST3-Artifact
+          path: ~/Library/Audio/Plug-Ins/VST3/
+
+  build-windows:
+    runs-on: windows-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
+      - name: Set up VisualStudio
+        uses: microsoft/setup-msbuild@v1.1
+        with:
+          vs-version: "latest"
+
+      - name: Download Pluginval
+        run: |
+          mkdir Pluginval
+          cd Pluginval
+          curl -L "https://github.com/Tracktion/pluginval/releases/latest/download/pluginval_Windows.zip" -o pluginval.zip
+          Expand-Archive -Path pluginval.zip -DestinationPath . -Force
+
+      - name: Build Plugin Windows VST3
+        run: |
+          cd viator-bedroom-comp/Builds/VisualStudio2022
+          msbuild "viator-bedroom-comp.sln" /p:Configuration=Release /p:Platform=x64
+
+      - name: Validate Windows VST3
+        run: |
+          Pluginval\pluginval.exe --strictness-level 5 --validate-in-process --verbose --validate viator-bedroom-comp\Builds\VisualStudio2022\x64\Release\VST3\viator-bedroom-comp.vst3 || exit 1
+
+      - name: Upload Windows VST3
+        uses: actions/upload-artifact@v3
+        with:
+          name: Windows-viator-bedroom-comp-VST3-Artifact
+          path: viator-bedroom-comp\Builds\VisualStudio2022\x64\Release\VST3\
 
