--- a/viator-bedroom-comp/Builds/MacOSX/viator-bedroom-comp.xcodeproj/xcshareddata/xcschemes/viator-bedroom-comp - AU.xcscheme
+++ b/viator-bedroom-comp/Builds/MacOSX/viator-bedroom-comp.xcodeproj/xcshareddata/xcschemes/viator-bedroom-comp - AU.xcscheme
@@ -40,6 +40,10 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <PathRunnable
+         runnableDebuggingMode = "0"
+         FilePath = "/Applications/Logic Pro X.app">
+      </PathRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
